[workspace]
members = [
  "crates/af-faucet",
  "crates/af-iperps",
  "crates/af-keys",
  "crates/af-move-type",
  "crates/af-move-type-derive",
  "crates/af-oracle",
  "crates/af-ptbuilder",
  "crates/af-pyth-wrapper",
  "crates/af-sui-pkg-sdk",
  "crates/af-sui-types",
  "crates/af-utilities",
  "crates/move-stdlib-sdk",
  "crates/pyth-hermes-client",
  "crates/pyth-sui-sdk",
  "crates/sui-framework-sdk",
  "crates/sui-gql-client",
  "crates/sui-gql-schema",
  "crates/sui-jsonrpc",
  "crates/wormhole-sui-sdk",
]
resolver = "2"

[workspace.package]
authors    = ["Aftermath Finance <admin@aftermath.finance>"]
categories = ["cryptography::cryptocurrencies"]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/AftermathFinance/aftermath-sdk-rust"

[workspace.lints.clippy]
nursery     = { level = "warn", priority = 1 }
todo        = "warn"
unwrap_used = "warn"

# https://github.com/eyre-rs/color-eyre?tab=readme-ov-file#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
