[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors      = ["Aftermath Finance <admin@aftermath.finance>"]
categories   = ["cryptography::cryptocurrencies"]
edition      = "2024"
license      = "Apache-2.0"
repository   = "https://github.com/AftermathFinance/aftermath-sdk-rust"
rust-version = "1.85"

[workspace.lints.clippy]
nursery               = { level = "warn", priority = 1 }
redundant_pub_crate   = { level = "allow", priority = 2 }
todo                  = "warn"
uninlined_format_args = "allow"
unwrap_used           = "warn"

[workspace.lints.rust]
exported_private_dependencies = "allow"

# https://github.com/eyre-rs/color-eyre?tab=readme-ov-file#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
