[package]
description = "Move types for the `Perpetuals` package"
name        = "af-iperps"
version     = "0.24.0"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "--generate-link-to-definition",
    "-Zunstable-options",
]

[lints]
workspace = true

[features]
graphql = [
    "dep:async-stream",
    "dep:cynic",
    "dep:enum-as-inner",
    "dep:futures",
    "dep:graphql-extract",
    "dep:sui-gql-client",
    "dep:sui-gql-schema",
    "sui-gql-client/move-type",
    "sui-gql-client/queries",
    "sui-gql-schema/build",
]
slo = ["dep:bcs", "dep:fastcrypto"]

[dependencies]
af-move-type      = { version = "0.8.4", path = "../af-move-type" }
af-sui-pkg-sdk    = { version = "0.8.6", path = "../af-sui-pkg-sdk" }
af-sui-types      = { version = "0.7.4", path = "../af-sui-types" }
af-utilities      = { version = "0.8.0", path = "../af-utilities" }
move-stdlib-sdk   = { version = "0.9.6", path = "../move-stdlib-sdk" }
sui-framework-sdk = { version = "0.10.6", path = "../sui-framework-sdk" }

clap        = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["display", "from", "is_variant", "try_into"] }
num-traits  = "0.2"
remain      = "0.2"
serde       = "1"
thiserror   = "2"

# GraphQL RPC (optional)
async-stream    = { version = "0.3", optional = true }
cynic           = { version = "3", optional = true }
enum-as-inner   = { version = "0.6", optional = true }
futures         = { version = "0.3", optional = true }
graphql-extract = { version = "0.0.5", path = "../graphql-extract", optional = true }
sui-gql-client  = { version = "0.14", path = "../sui-gql-client", default-features = false, optional = true }

# SLO
bcs        = { version = "0.1", optional = true }
fastcrypto = { version = "0.1", optional = true }

[build-dependencies.sui-gql-schema]
default-features = false
features         = ["build"]
optional         = true
path             = "../sui-gql-schema"
version          = "0.8.5"


[dev-dependencies]
clap           = { version = "4", features = ["derive"] }
color-eyre     = "0.6"
indicatif      = "0.17"
insta          = "1"
nonempty       = "0.11"
reqwest        = "0.12"
rgb            = "0.8"
sui-gql-client = { path = "../sui-gql-client", features = ["reqwest"] }
textplots      = "0.8"
tokio          = { version = "1", features = ["full"] }
tokio-test     = "0.4"


[[example]]
name              = "clearing-house-orders"
path              = "examples/clearing_house_orders.rs"
required-features = ["graphql"]

[[example]]
name              = "order-maps"
path              = "examples/order_maps.rs"
required-features = ["graphql"]

[[example]]
name              = "map-orders"
path              = "examples/map_orders.rs"
required-features = ["graphql"]

[[example]]
name              = "clearing-house-vault"
path              = "examples/clearing_house_vault.rs"
required-features = ["graphql"]

[[example]]
name              = "clearing-house-positions"
path              = "examples/clearing_house_positions.rs"
required-features = ["graphql"]

[[example]]
name              = "all-orders-concurrently"
path              = "examples/all_orders_concurrently.rs"
required-features = ["graphql"]
