[package]
description = "Light-weight, read-only version of Sui's file-based keystore."
name        = "af-keys"
version     = "0.6.4"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
bcs           = "0.1"
derive_more   = { version = "2", features = ["as_ref", "from"] }
enum_dispatch = "0.3"
eyre          = "0.6"
fastcrypto    = ">=0.1,<0.1.9"
once_cell     = "1"
serde         = "1"
serde_json    = "1"
serde_repr    = "0.1"
serde_with    = "3"
signature     = "2"
strum         = { version = "0.27", features = ["derive"] }
thiserror     = "2"

af-sui-types = { version = "0.7.3", features = ["hash"], path = "../af-sui-types" }

[dev-dependencies]
tempfile = "3"
