[package]
description = "Light-weight, read-only version of Sui's file-based keystore."
name        = "af-keys"
version     = "0.8.9"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-sui-types  = { version = "0.10.0", public = true, features = ["hash"], path = "../af-sui-types" }
eyre          = { version = "0.6", public = true }
fastcrypto    = { version = "0.1.9", public = true }
serde         = { version = "1", public = true }
signature     = { version = "2", public = true }
sui-sdk-types = { version = "0.0.4", public = true }
## Because of `fastcrypto`
blake2  = { version = "0.10", public = true }
digest  = { version = "0.10", public = true }
typenum = { version = "1", public = true }

bcs           = "0.1"
derive_more   = { version = "2", features = ["as_ref", "from"] }
enum_dispatch = "0.3"
once_cell     = "1"
rustversion   = "1"
serde_json    = "1"
serde_repr    = "0.1"
serde_with    = "3"
strum         = { version = "0.27", features = ["derive"] }
thiserror     = "2"


[dev-dependencies]
tempfile = "3"
