[package]
autotests   = false
description = "Derive macros for traits defined in af-move-type."
name        = "af-move-type-derive"
version     = "0.2.1"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
convert_case = "0.7.1"
deluxe       = "0.5.0"
proc-macro2  = "1.0.70"
quote        = "1.0.33"
syn          = { version = "2.0.39", features = ["full"] }

[dev-dependencies]
af-move-type = { path = "../af-move-type" }
serde        = { version = "1", features = ["derive"] }
trybuild     = { version = "1", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/tests.rs"
