[package]
autotests   = false
description = "Derive macros for traits defined in af-move-type."
name        = "af-move-type-derive"
version     = "0.3.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
proc-macro2 = { version = "1.0.70", public = true }
syn         = { version = "2.0.39", public = true, features = ["full"] }

convert_case = "0.7.1"
deluxe       = "0.5.0"
quote        = "1.0.33"
rustversion  = "1"

[dev-dependencies]
af-move-type = { path = "../af-move-type" }
serde        = { version = "1", features = ["derive"] }
trybuild     = { version = "1", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/tests.rs"
