[package]
description = "Standard for representing Move types (`MoveType`) off-chain and their type tags."
name        = "af-move-type"
version     = "0.7.3"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
af-move-type-derive = { version = "0.2", path = "../af-move-type-derive" }
af-sui-types        = { version = "0.6", path = "../af-sui-types", features = ["u256"] }

bcs           = "0.1"
derive-where  = "1"
derive_more   = { version = "1", features = ["deref", "deref_mut", "from", "into"] }
serde         = "1"
serde_json    = "1"
serde_with    = "3"
sui-sdk-types = "0.0.2"
tabled        = "0.16"
thiserror     = "2"
