[package]
description = "Move types for Aftermath's `AfOracle` package"
name        = "af-oracle"
version     = "0.18.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
graphql = [
  "dep:async-stream",
  "dep:bcs",
  "dep:cynic",
  "dep:enum-as-inner",
  "dep:extension-traits",
  "dep:futures",
  "dep:graphql-extract",
  "dep:sui-gql-client",
  "dep:sui-gql-schema",
  "dep:trait-variant",
  "sui-gql-client/move-type",
  "sui-gql-client/queries",
  "sui-gql-schema/build",
]

[dependencies]
af-move-type      = { version = "0.9.0", path = "../af-move-type" }
af-sui-pkg-sdk    = { version = "0.9.0", path = "../af-sui-pkg-sdk" }
af-sui-types      = { version = "0.8.0", path = "../af-sui-types" }
af-utilities      = { version = "0.9.0", path = "../af-utilities" }
sui-framework-sdk = { version = "0.11.0", path = "../sui-framework-sdk" }

derive_more = { version = "2", features = ["display", "from", "is_variant", "try_into"] }
remain      = "0.2"
serde       = "1"
serde_json  = "1"
thiserror   = "2"

bcs              = { version = "0.1", optional = true }
extension-traits = { version = "2", optional = true }
trait-variant    = { version = "0.1", optional = true }

# GraphQL RPC (optional)
async-stream    = { version = "0.3", optional = true }
cynic           = { version = "3", optional = true }
enum-as-inner   = { version = "0.6", optional = true }
futures         = { version = "0.3", optional = true }
graphql-extract = { version = "0.0.7", path = "../graphql-extract", optional = true }

[dependencies.sui-gql-client]
default-features = false
features         = ["move-type", "queries"]
optional         = true
path             = "../sui-gql-client"
version          = "0.16.1"

[build-dependencies.sui-gql-schema]
default-features = false
features         = ["build"]
optional         = true
path             = "../sui-gql-schema"
version          = "0.10.0"

[dev-dependencies]
clap             = { version = "4", features = ["derive"] }
color-eyre       = "0.6"
indicatif        = "0.17"
insta            = "1"
reqwest          = "0.12"
rustdoc-json     = "0.9.5"
rustup-toolchain = "0.1.10"
sui-gql-client   = { path = "../sui-gql-client", features = ["reqwest"] }
tokio            = { version = "1", features = ["full"] }
tokio-test       = "0.4"

[[example]]
name              = "price-feeds"
path              = "examples/price_feeds.rs"
required-features = ["graphql"]

[[example]]
name              = "price-feed-for-source"
path              = "examples/price_feed_for_source.rs"
required-features = ["graphql"]
