[package]
description = "Programmable transaction builder and macros (offline)"
name        = "af-ptbuilder"
version     = "5.0.7"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-sui-types  = { version = "0.8.7", public = true, path = "../af-sui-types" }
bcs           = { version = "0.1", public = true }
serde         = { version = "1", public = true, features = ["derive"] }
sui-sdk-types = { version = "0.0.3", public = true }

indexmap  = "2"
thiserror = "2"


[dev-dependencies]
clap          = { version = "4", features = ["derive"] }
eyre          = "0.6"
proptest      = "1"
rand          = "0.9"
serde_json    = "1"
serde_with    = "3"
sui-sdk-types = { version = "0.0.3", features = ["proptest"] }
test-strategy = "0.4"


[[example]]
name = "ptbuilder-serde"
path = "./examples/builder_serde.rs"
